--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>Nexcent</title>
     <link rel="stylesheet" href="./css/bootstrap.min.css" />
 
+    <!-- google fonts -->
+
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
